# AI-Safety-and-Evals-Course

./: .gitignore  inspect_ai_tutorial_week_1.ipynb  inspect_ai_tutorial_week_2.ipynb  inspect_ai_tutorial_week_3.ipynb  inspect_ai_tutorial_week_4.ipynb  pyproject.toml
logs/: 2026-03-15T13-48-35+00-00_hello-model_eGxQzZrBQxqe5AFJ4DqCmq.eval  2026-03-15T13-48-47+00-00_hello-model_9FTXzHvck9Ce6EWYKeYavx.eval  2026-03-15T14-33-29+00-00_hello-model_baL4BwKrAY87Ei8sPewm4i.eval  2026-03-15T14-49-58+00-00_example-system-message_MNqC6zN65pXRstPis6ab2m.eval  2026-03-15T14-51-11+00-00_example-prompt-template_9rgcHCrFMvmLRFYTCbNABt.eval  2026-03-15T14-53-31+00-00_example-chain-of-thought_k54pjmc3zexkpNPpczafAK.eval  2026-03-15T14-55-29+00-00_example-multiple-choice-with-cot_ChvxZfm7kEyDhCqTUypuXQ.eval  2026-03-15T15-01-50+00-00_yes-no-classification_Db2mmA3QmUKUP8Umnk3cjB.eval  2026-03-15T15-10-45+00-00_sentiment-classification_ZUtikcLDiKRgUT4rgc9nXu.eval  2026-03-15T15-11-09+00-00_choice-with-reasoning_czPfZryfcUxgbsA6vYCK6q.eval  2026-03-15T15-14-40+00-00_mc-with-metadata_aKR8uwhcDNM5NnCSz5384B.eval  2026-03-15T15-16-16+00-00_mc-multiple-correct_MRYM9KXLAsSpv4zbkXJAhR.eval  2026-03-15T15-36-07+00-00_position-bias-task_PSrqSaDcaRQgdHqv3XVr4V.eval  2026-03-15T15-37-23+00-00_position-bias-task_624emDxwe524vPseB5Qmzm.eval  2026-03-15T15-47-57+00-00_position-bias-task_7KDMDW4iLC24XRfcv86zCa.eval  2026-03-15T15-49-16+00-00_position-bias-task_T7Fu3LxhUBa8P8FkMWfj3M.eval  2026-03-15T15-52-14+00-00_position-bias-task_Kxp9Dq6ftNPrB3uzT5SkyD.eval  (+139 more)
