[project]
name = "ai-safety-and-evals-course"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "inspect-ai>=0.3.195",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "openai>=2.28.0",
    "requests>=2.32.5",
    "sambanova>=1.5.0",
]
