[project]
name = "ai-safety-and-evals-course"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=4.8.4",
    "inspect-ai>=0.3.195",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "sambanova>=1.5.0",
    "scipy>=1.17.1",
]
